# ben

./: .gitignore  Taskfile.yml  bootstrapservice.go  btca.config.jsonc  coverservice.go  go.mod  go.sum  libraryservice.go  main.go  playerservice.go  queueservice.go  scannerservice.go  settingsservice.go  statsservice.go  themeservice.go
.agents/skills/btca-cli/: SKILL.md
docs/: PHASE2_REWRITE_PLAN.md  PROFILING_RESULT.md  PROJECT_PLAN.md  REFACTOR_PLAN.md  UI_REFACTOR_PLAN.md  rewrite_rollback.md
frontend/: .prettierignore  eslint.config.mjs  index.html  package.json  vite.config.ts
frontend/bindings/ben/: bootstrapservice.ts  index.ts  libraryservice.ts  models.ts  playerservice.ts  queueservice.ts  scannerservice.ts  settingsservice.ts  statsservice.ts  themeservice.ts
frontend/src/: App.tsx  main.tsx  theme.css
frontend/src/app/: AppShell.tsx
frontend/src/features/: types.ts
frontend/src/shared/: cover.ts
internal/config/: paths.go
internal/coverart/: variants.go
internal/db/: db.go  migrations.go
internal/db/migrations/: 001_initial.sql  002_cover_and_catalog_indexes.sql  003_play_stats_daily_rollup.sql  (+2 more)
internal/palette/: extractor.go  extractor_test.go
internal/platform/: service_contract.go  service_stub.go  service_windows.go
internal/player/: backend.go  backend_mpv.go  backend_stub.go  service.go
internal/queue/: service.go  service_test.go
internal/scanner/: service.go
internal/stats/: dashboard.go  dashboard_test.go  service.go  service_test.go
scripts/: .gitignore  build_thumbbar_icons.py  pyproject.toml
(+146 files in other folders)
